--- a/src/app/parts/dash/dash.component.html
+++ b/src/app/parts/dash/dash.component.html
@@ -61,45 +61,28 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Menu de navegação</li>
-        <li class="treeview link-pointer" routerLinkActive="active menu-open">
-          <a>
-            <i class="fa fa-linux"></i> <span>Item</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li class="" routerLinkActive="active"><a [routerLink]="['/main']"><i class="fa fa-linux"></i> Sub Item</a></li>
-          </ul>
-        </li>
         <li routerLinkActive="active">
           <a [routerLink]="['/main1']">
-            <i class="fa fa-linux text-success"></i>
-            <span>Item 1</span>
+            <i class="fa fa-lock text-success"></i>
+            <span>Adminstradores</span>
           </a>
         </li>
         <li routerLinkActive="active">
           <a [routerLink]="['/main2']">
-            <i class="fa fa-linux text-danger"></i>
-            <span>Item 2</span>
+            <i class="fa fa-graduation-cap text-danger"></i>
+            <span>Conhecimentos</span>
           </a>
         </li>
         <li routerLinkActive="active">
           <a [routerLink]="['/main3']">
-            <i class="fa fa-linux text-info"></i>
-            <span>Item 3</span>
+            <i class="fa fa-envelope text-info"></i>
+            <span>Contato</span>
           </a>
         </li>
         <li routerLinkActive="active">
           <a [routerLink]="['/main4']">
-            <i class="fa fa-linux text-warning"></i>
-            <span>Item 4</span>
-          </a>
-        </li>
-        <li routerLinkActive="active">
-          <a [routerLink]="['/main5']">
-            <i class="fa fa-linux text-muted"></i>
-            <span>Item 5</span>
+            <i class="fa fa-info text-warning"></i>
+            <span>Institucional</span>
           </a>
         </li>
       </ul>
@@ -120,7 +103,7 @@
     </div>
     <strong>
       <a href="https://www.pluritech.com.br">
-      Pluritech Brasil</a>.
+      Feito por Pluritech Brasil e Lucas Mariz</a>.
     </strong>
   </footer>
   <!-- /.control-sidebar -->
