Adding initial components and routes

--- a/src/app/parts/dash/dash.component.html
+++ b/src/app/parts/dash/dash.component.html
@@ -62,25 +62,25 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">Menu de navegação</li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/main1']">
+          <a [routerLink]="['/admins']">
             <i class="fa fa-lock text-success"></i>
             <span>Adminstradores</span>
           </a>
         </li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/main2']">
+          <a [routerLink]="['/knowledges']">
             <i class="fa fa-graduation-cap text-danger"></i>
             <span>Conhecimentos</span>
           </a>
         </li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/main3']">
+          <a [routerLink]="['/contact']">
             <i class="fa fa-envelope text-info"></i>
             <span>Contato</span>
           </a>
         </li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/main4']">
+          <a [routerLink]="['/institucional']">
             <i class="fa fa-info text-warning"></i>
             <span>Institucional</span>
           </a>
