Update to angular 7

--- a/src/app/pages/admin-list/admin-list.component.html
+++ b/src/app/pages/admin-list/admin-list.component.html
@@ -1,4 +1,4 @@
-<section class="content-header">
+<!-- <section class="content-header">
   <h1>
     <span>Administradores</span>
     <small> - Listagem de administradores</small>
@@ -42,10 +42,8 @@
 
   <div class="box-body row" [hidden]="loading">
     <div class="col-md-12">
-      <pluritech-pagination *ngIf="listAdmins?.total > filter.limit" [total]="listAdmins?.total" [limit]="filter.limit"
-        (changePage)="handleChangePage($event)">
-      </pluritech-pagination>
+      // Pagination
     </div>
   </div>
   
-</section>
+</section> -->
