--- a/src/app/pages/admin-list/admin-list.component.html
+++ b/src/app/pages/admin-list/admin-list.component.html
@@ -1,4 +1,4 @@
-<!-- <section class="content-header">
+<section class="content-header">
   <h1>
     <span>Administradores</span>
     <small> - Listagem de administradores</small>
@@ -33,8 +33,7 @@
   <div *ngIf="!loading" class="box-body with-border row">
     <div class="col-md-12">
       <p class="text-center"> Sua busca retornou um total de {{ listAdmins?.total || '0' }} resultados. </p>
-      <ng-table class="align-center" [data]=data>
-      </ng-table>
+      <app-table></app-table>
     </div>
   </div>
 
@@ -46,4 +45,4 @@
     </div>
   </div>
   
-</section> -->
+</section>
