--- a/src/app/pages/admin-list/admin-list.component.html
+++ b/src/app/pages/admin-list/admin-list.component.html
@@ -41,7 +41,7 @@
 
   <div class="box-body row" [hidden]="loading">
     <div class="col-md-12">
-      // Pagination
+      <app-pagination></app-pagination>      
     </div>
   </div>
   
