Center pagination content

--- a/src/app/pages/admin-list/admin-list.component.html
+++ b/src/app/pages/admin-list/admin-list.component.html
@@ -39,7 +39,7 @@
 
   <app-loader *ngIf="loading"></app-loader>
 
-  <div class="box-body row" [hidden]="loading">
+  <div class="box-body row align-center" [hidden]="loading">
     <div class="col-md-12">
       <app-pagination></app-pagination>      
     </div>
