--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
   <!-- /.login-logo -->
   <div class="login-box-body">
     <p class="login-box-msg">
-      Informe o seu e-mail para que possamos enviar uma senha temporária para você. Caso demore mais que o normal verifique a sua caixa de spam.
+      Informe o seu e-mail para que possamos enviar instruções de mudança de senha. Caso demore mais que o normal verifique a sua caixa de spam.
     </p>
 
     <div class="form-group has-feedback" *ngIf="!isSubmitting">
