--- a/src/app/pages/admin-list/admin-list.component.html
+++ b/src/app/pages/admin-list/admin-list.component.html
@@ -9,37 +9,36 @@
 
   <div class="row section">
     <div class="col-md-3 form-group">
-      <input type="text" class="form-control" placeholder="Nome" [(ngModel)]="filter.name">
+      <input type="text" class="form-control" placeholder="Nome">
     </div>
 
     <div class="col-md-3 form-group">
-      <input type="email" class="form-control" placeholder="Email" [(ngModel)]="filter.email">
+      <input type="email" class="form-control" placeholder="Email">
     </div>
 
     <div class="col-md-3 col-xs-12">
-      <button class="align-center btn btn-primary btn-block btn-flat btn-social section" (click)="filtrate()">
+      <button class="align-center btn btn-primary btn-block btn-flat btn-social section">
         <i class="fa fa-search"></i>
         Filtrar
       </button>
     </div>
     <div class="col-md-3 col-xs-12">
-      <button class="align-center btn btn-success btn-block btn-social btn-flat section" [routerLink]="['/admin/new']">
+      <button class="align-center btn btn-success btn-block btn-social btn-flat section" [routerLink]="['/admins/new']">
         <i class="fa fa-plus"></i>
         Cadastrar
       </button>
     </div>
   </div>
 
-  <div *ngIf="!loading" class="box-body with-border row">
+  <div *ngIf="!(isLoading$ | async)" class="box-body with-border row">
     <div class="col-md-12">
-      <p class="text-center"> Sua busca retornou um total de {{ listAdmins?.total || '0' }} resultados. </p>
-      <app-table></app-table>
+      <app-table [adminList]="adminList$ | async" [columns]="columns" [actions]="actions"></app-table>
     </div>
   </div>
 
-  <app-loader *ngIf="loading"></app-loader>
+  <app-loader *ngIf="(isLoading$ | async)"></app-loader>
 
-  <div class="box-body row align-center" [hidden]="loading">
+  <div class="box-body row align-center" [hidden]="(isLoading$ | async)">
     <div class="col-md-12">
       <app-pagination></app-pagination>      
     </div>
