--- a/src/app/pages/admin-new-update/admin-new-update.component.html
+++ b/src/app/pages/admin-new-update/admin-new-update.component.html
@@ -1,4 +1,4 @@
-<section class="content-header">
+<!-- <section class="content-header">
   <h1>
     <span>Administradores</span>
     <small> - {{ isEdit ? 'Edição' : 'Criação' }} de administradores</small>
@@ -45,4 +45,4 @@
     </div>
   </div>
   
-</section>
+</section> -->
